--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -17,8 +17,6 @@ code {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -27,3 +25,57 @@ img {
   height: 800px;
   width: 1200px;
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #282c34;
+  height: 10vh;
+}
+
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+
+
+
+
+.margin10 {
+  margin: 10px;
+  padding: 10px;
+}
+
+.white-text {
+  color: white;
+  font-weight: 900;
+}
+
+.white-border {
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+.white-border:hover {
+  border: 3px solid white;
+}
+
+.transparent-background {
+  background-color: transparent;
+}
+
+
+.vh100 {
+  min-height: 100vh;
+  min-width: 100vh;
+}
+
+.react-background {
+  background-color: #282c34;
+}
+
+
