--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -34,11 +34,49 @@ img {
   height: 10vh;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-grid {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  gap: 10px;
+  width: 100%;
+  max-width: 100vh;
+}
+
+.form-group {
+  display: contents;
+}
+
+.form-label {
+  align-self: center;
+}
+
+.form-input, .form-button {
+  grid-column: 2;
+}
+
+.form-error {
+  grid-column: 2;
+  color: red;
+  font-size: 0.9em;
+}
 
 .flex-row {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+}
+
+.flex-column {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items:center;
 }
 
 
@@ -48,6 +86,22 @@ img {
 .margin10 {
   margin: 10px;
   padding: 10px;
+}
+
+.margin10vh {
+  margin: 10vh;
+  padding: 10vh;
+}
+
+
+.margin-top-bot10vh {
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+}
+
+.margin-top10vh {
+  margin-top: 10vh;
+
 }
 
 .white-text {
@@ -77,5 +131,38 @@ img {
 .react-background {
   background-color: #282c34;
 }
+
+.vh20{
+  height: 20vh;
+  width: auto;
+}
+.vh50 {
+  height: 50vh;
+  width: auto;
+
+}
+
+.vh5 {
+  height: 5vh;
+  width: auto;
+}
+.vh6 {
+  max-height: 10vh;
+  max-width: auto;
+}
+
+.font-size-5vh {
+  font-size: 5vh;
+}
+
+.font-size-3vh {
+  font-size: 3vh;
+}
+
+.font-size-15vh {
+  font-size: 15vh;
+}
+
+
 
 
